<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. This code was written by iClaude. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"

        android:text="@string/action_save"
        app:showAsAction="always|withText" />
</menu>